<resources>
    <string name="app_name">DTT REAL ESTATE</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview_header">DTT REAL ESTATE</string>
    <string name="search_text">Search for a home</string>
    <string name="placeholder_text_price">$45,000</string>
    <string name="placeholder_text_address">1034 ZH Amsterdam</string>
    <string name="placeholder_text_bed_number">1</string>
    <string name="placeholder_text_bath_number">1</string>
    <string name="placeholder_text_size">46</string>
    <string name="placeholder_text_distance">56 km</string>
    <string name="information_header">ABOUT</string>
    <string name="information_description">Lorem ipsum dolor sit amet,
        consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
        Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
        nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
        pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel,
        aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis
        vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
        Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor
        eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
        tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
        ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.</string>
    <string name="information_footer">Design and Development</string>
    <string name="by_dtt">by DTT</string>
    <string name="dtt_web">d-tt.nl</string>
    <string name="search_empty_stage">No result found! \nPerhaps try another search?</string>
    <string name="placeholder_description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
        id est laborum.</string>
    <string name="description">Description</string>
    <string name="toolbar_content_description">Toolbar</string>
    <string name="location">Location</string>
    <string name="info">Info</string>
    <string name="home">Home</string>

</resources>