<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.view.info.InformationFragment">

    <TextView
        android:id="@+id/text_view_information_header"
        style="@style/header"
        android:layout_width="85dp"
        android:layout_height="38dp"
        android:layout_marginStart="@dimen/header_margin_start"
        android:layout_marginTop="@dimen/header_margin_top"
        android:text="@string/information_header"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_view_information_description"
        style="@style/body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_view_information_screen"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="@dimen/margin_end_description_information_screen"
        android:text="@string/information_description"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_information_header" />

    <TextView
        android:id="@+id/text_view_information_footer"
        style="@style/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_view_information_screen"
        android:layout_marginTop="@dimen/margin_top_view_information_screen"
        android:text="@string/information_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_information_description" />

    <ImageView
        android:id="@+id/image_view_logo_information"
        android:layout_width="@dimen/information_logo_width"
        android:layout_height="@dimen/information_logo_height"
        android:layout_marginStart="@dimen/margin_start_view_information_screen"
        android:layout_marginTop="@dimen/margin_top_view_information_screen"
        android:src="@mipmap/dtt_banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_information_footer" />

    <TextView
        android:id="@+id/text_view_information_bydtt"
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_view_information_screen"
        android:layout_marginTop="@dimen/item_top_margin"
        android:text="@string/by_dtt"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/image_view_logo_information"
        app:layout_constraintTop_toTopOf="@+id/image_view_logo_information" />

    <TextView
        android:id="@+id/text_view_information_link"
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_view_information_screen"
        android:text="@string/dtt_web"
        android:textColor="@color/link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/image_view_logo_information"
        app:layout_constraintTop_toBottomOf="@+id/text_view_information_bydtt" />

</androidx.constraintlayout.widget.ConstraintLayout>