<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="house"
            type="com.example.realestateapp.data.model.House" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_layout_height">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/medium"
                app:expandedTitleMarginEnd="@dimen/collapsing_toolbar_title_margin_end"
                app:expandedTitleMarginStart="@dimen/collapsing_toolbar_title_margin_start"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/details_image_height"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{house.image}"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:contentDescription="@string/toolbar_content_description"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:navigationIcon="@drawable/ic_back"
                    app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:titleTextColor="@android:color/white" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-16dp"
            android:background="@drawable/background_cardview"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <TextView
                    android:id="@+id/text_view_details_price"
                    style="@style/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_text_view_price"
                    android:layout_marginTop="@dimen/margin_top_text_view_price"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:price="@{house.price}"
                    tools:text="@string/placeholder_text_price" />

                <TextView
                    android:id="@+id/text_view_details_distance"
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/text_view_margin_end_distance"
                    app:layout_constraintBottom_toBottomOf="@+id/text_view_details_price"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_view_details_price"
                    tools:text="@string/placeholder_text_distance" />

                <ImageView
                    android:id="@+id/image_view_details_distance"
                    android:layout_width="@dimen/width_image_view_icon_details_screen"
                    android:layout_height="@dimen/height_image_view_icon_details_screen"
                    android:layout_marginEnd="@dimen/margin_end_image_view_icon_details_screen"
                    android:src="@drawable/ic_location"
                    app:layout_constraintBottom_toBottomOf="@+id/text_view_details_price"
                    app:layout_constraintEnd_toStartOf="@+id/text_view_details_distance"
                    app:layout_constraintTop_toTopOf="@+id/text_view_details_price" />

                <TextView
                    android:id="@+id/text_view_details_size"
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end_text_view_icon_title_details_screen"
                    android:text="@{Integer.toString(house.size)}"
                    app:layout_constraintBottom_toBottomOf="@+id/text_view_details_price"
                    app:layout_constraintEnd_toStartOf="@+id/image_view_details_distance"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_view_details_price"
                    tools:text="@string/placeholder_text_size" />

                <ImageView
                    android:id="@+id/image_view_details_size"
                    android:layout_width="@dimen/width_image_view_icon_details_screen"
                    android:layout_height="@dimen/height_image_view_icon_details_screen"
                    android:layout_marginEnd="@dimen/margin_end_image_view_icon_details_screen"
                    android:src="@drawable/ic_layers"
                    app:layout_constraintBottom_toBottomOf="@+id/text_view_details_price"
                    app:layout_constraintEnd_toStartOf="@+id/text_view_details_size"
                    app:layout_constraintTop_toTopOf="@+id/text_view_details_price" />

                <TextView
                    android:id="@+id/text_view_details_bath"
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end_text_view_icon_title_details_screen"
                    android:text="@{Integer.toString(house.bathrooms)}"
                    app:layout_constraintBottom_toBottomOf="@+id/text_view_details_price"
                    app:layout_constraintEnd_toStartOf="@+id/image_view_details_size"
                    app:layout_constraintTop_toTopOf="@+id/text_view_details_price"
                    tools:text="@string/placeholder_text_bath_number" />

                <ImageView
                    android:id="@+id/image_view_details_bath"
                    android:layout_width="@dimen/width_image_view_icon_details_screen"
                    android:layout_height="@dimen/height_image_view_icon_details_screen"
                    android:layout_marginEnd="@dimen/margin_end_image_view_icon_details_screen"
                    android:src="@drawable/ic_bath"
                    app:layout_constraintBottom_toBottomOf="@+id/text_view_details_price"
                    app:layout_constraintEnd_toStartOf="@+id/text_view_details_bath"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_view_details_price" />

                <TextView
                    android:id="@+id/text_view_details_bed"
                    style="@style/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_end_text_view_icon_title_details_screen"
                    android:text="@{Integer.toString(house.bedrooms)}"
                    app:layout_constraintBottom_toBottomOf="@+id/text_view_details_price"
                    app:layout_constraintEnd_toStartOf="@+id/image_view_details_bath"
                    app:layout_constraintTop_toTopOf="@+id/text_view_details_price"
                    tools:text="@string/placeholder_text_bed_number" />

                <ImageView
                    android:id="@+id/image_view_details_bed"
                    android:layout_width="@dimen/width_image_view_icon_details_screen"
                    android:layout_height="@dimen/height_image_view_icon_details_screen"
                    android:layout_marginStart="@dimen/margin_start_image_view_bed"
                    android:layout_marginEnd="@dimen/margin_end_image_view_icon_details_screen"
                    android:src="@drawable/ic_bed"
                    app:layout_constraintBottom_toBottomOf="@+id/text_view_details_price"
                    app:layout_constraintEnd_toStartOf="@+id/text_view_details_bed"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@id/text_view_details_price"
                    app:layout_constraintTop_toTopOf="@+id/text_view_details_price" />

                <TextView
                    android:id="@+id/text_view_details_description_title"
                    style="@style/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_text_view_details_screen_header"
                    android:layout_marginTop="@dimen/margin_top_text_view_details_screen_header"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_details_price" />

                <TextView
                    android:id="@+id/text_view_details_description_content"
                    style="@style/body"
                    android:layout_width="@dimen/width_text_view_details_screen"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_view_details_screen"
                    android:layout_marginTop="@dimen/margin_top_view_details_screen"
                    android:layout_marginEnd="@dimen/margin_end_view_details_screen"
                    android:text="@{house.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_details_description_title"
                    tools:text="@string/placeholder_description_text" />

                <TextView
                    android:id="@+id/text_view_details_location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_text_view_details_screen_header"
                    android:layout_marginTop="@dimen/margin_top_text_view_details_screen_header"
                    android:text="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>